--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,13 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x",
+    "angular": "1.3.9",
+    "angular-bootstrap": "~0.11.0",
+    "angular-route": "1.3.9",
+    "angular-loader": "1.3.9",
+    "angular-mocks": "~1.3.9",
+    "bootstrap": "~3.3.1",
     "html5-boilerplate": "~4.3.0",
-    "bootstrap": "~3.3.1"
+    "font-awesome": "~4.1.0"
   }
 }
