--- a/bower.json
+++ b/bower.json
@@ -6,13 +6,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.3.9",
+    "angular": "~1.3.11",
     "angular-bootstrap": "~0.11.0",
-    "angular-route": "1.3.9",
-    "angular-loader": "1.3.9",
-    "angular-mocks": "~1.3.9",
+    "angular-route": "~1.3.11",
+    "angular-loader": "~1.3.11",
+    "angular-mocks": "~1.3.11",
     "bootstrap": "~3.3.1",
     "html5-boilerplate": "~4.3.0",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "angular-animate": "~1.3.11"
   }
 }
