--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "bootstrap": "~3.3.1",
     "html5-boilerplate": "~4.3.0",
     "font-awesome": "~4.1.0",
-    "angular-animate": "~1.3.11"
+    "angular-animate": "~1.3.11",
+    "gsap": "~1.15.1",
+    "animate.css": "~3.2.1"
   }
 }
