--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "angular-animate": "~1.3.11",
     "gsap": "~1.15.1",
     "animate.css": "~3.2.1"
+  },
+  "devDependencies": {
+    "jquery": "~2.1.3"
   }
 }
