--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "bootstrap": "~3.3.1",
     "html5-boilerplate": "~4.3.0",
     "font-awesome": "~4.1.0",
-    "angular-animate": "~1.3.11"
+    "angular-animate": "~1.3.11",
+    "angular-messages": "~1.3.15"
   }
 }
